--- a/src/main/webapp/WEB-INF/views/receipt/delete.html
+++ b/src/main/webapp/WEB-INF/views/receipt/delete.html
@@ -31,7 +31,7 @@
         </tr>
         <tr>
             <td>Picture:</td>
-            <td th:text="${receipt.pictureName}"></td>
+            <td><img width="100" height="100" th:src="@{'/fileanh/' + ${receipt.pictureName}}" alt=""></td>
         </tr>
         <tr>
             <td></td>
